--- a/topic.html
+++ b/topic.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar">
       <ul>
-        <li><a href="home.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="aboutme.html" >ABOUT ME</a></li>
         <li><a href="#" id="nav-current">INTERESTING TOPIC</a></li>
       </ul>
